--- a/appsettings.json
+++ b/appsettings.json
@@ -1,19 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-AR78FVS\\MSSQLSERVER01;Database=EnglishLearningDB;User Id=sa;Password=123456;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*",
-  
-  {
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=DESKTOP-AR78FVS\\MSSQLSERVER01;Database=EnglishLearningDB;User Id=sa;Password=123456;TrustServerCertificate=True"
-    }
+  "JwtSettings": {
+    "Key": "L&$Fjsdiowu423jlkd!@42$dfjsllcJ@#$kj@",
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000"
+
   }
-  
 }
+
 
 
 
